--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 
                 <h3>Review Articles</h3>
                 <ul>
-                    <li>Submitted - Khetal Surana*, Shashwat Singh*, Aditya Sunil Lade, Shreerang V. Joshi, Chemistry and Medicinal Potential of Scorpion Venom, <em>The FEBS Journal</em>, November 2024. (*co-first author) (<a href="https://doi.org/10.26434/chemrxiv-2024-32wws" target="_blank">ChemRxiv Link</a>)</li>
+                    <li>Submitted - Khetal Surana*, Shashwat Singh*, Aditya Sunil Lade, Nitin Arote, Shreerang V. Joshi, Chemistry of Scorpion Venom and its Medicinal Potential, <em>The FEBS Journal</em>, November 2024. (*co-first author) (<a href="https://doi.org/10.26434/chemrxiv-2024-32wws" target="_blank">ChemRxiv Link</a>)</li>
                     <li>Manuscript Under Preparation - Khetal Surana, Mariam S. Degani, Mitochondrial Targeting Small Molecule Peptidomimetics for Anti-Cancer Therapy.</li>
                     <li>Manuscript Under Preparation - Aditya Sunil Lade, Khetal Surana, Shreerang V. Joshi, Chemical Transformations of Aldehyde Moieties for developing Sandalwood odorants.</li>
                 </ul>
