--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <ul>
                     <li>
                         To be Submitted - Aditya Sunil Lade, Khetal Vasant Surana, Sai Srinivas Ponugoti, Shreerang V. Joshi, Chemoselective One-Pot Synthesis of Aldimines via a Mechanochemical Approach, 
-                        <em>Synlett (Thieme), December 2024</em>. <br>
+                        <em>Synlett (Thieme)</em>, December 2024. <br>
                     </li>
                     <li>
                         Work in Progress - Efficient Synthesis of Quinoxalines: A Green Catalytic Approach in a Biphasic Medium.
