--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <ul>
                     <li>
                         To be Submitted - Aditya Sunil Lade, Khetal Vasant Surana, Sai Srinivas Ponugoti, Shreerang V. Joshi, Chemoselective One-Pot Synthesis of Aldimines via a Mechanochemical Approach, 
-                        <em>Synlett (Thieme)</em>, December 2024. <br>
+                        <em>Organic & Biomolecular Chemistry</em>, December 2024. <br>
                     </li>
                     <li>
                         Work in Progress - Efficient Synthesis of Quinoxalines: A Green Catalytic Approach in a Biphasic Medium.
@@ -159,7 +159,7 @@
                 
                 <h3>Review Articles</h3>
                 <ul>
-                    <li>Submitted - Khetal Surana*, Shashwat Singh*, Aditya Sunil Lade, Nitin Arote, Shreerang V. Joshi, Chemistry of Scorpion Venom and its Medicinal Potential, <em>The FEBS Journal</em>, November 2024. (*co-first author) (<a href="https://doi.org/10.26434/chemrxiv-2024-32wws" target="_blank">ChemRxiv Link</a>)</li>
+                    <li>Submitted - Khetal Surana*, Shashwat Singh*, Aditya Sunil Lade, Nitin Arote, Shreerang V. Joshi, Chemistry of Scorpion Venom and its Medicinal Potential, <em>Biochimie</em>, November 2024. (*co-first author) (<a href="https://doi.org/10.26434/chemrxiv-2024-32wws" target="_blank">ChemRxiv Link</a>)</li>
                     <li>Manuscript Under Preparation - Khetal Surana, Mariam S. Degani, Mitochondrial Targeting Small Molecule Peptidomimetics for Anti-Cancer Therapy.</li>
                     <li>Manuscript Under Preparation - Aditya Sunil Lade, Khetal Surana, Shreerang V. Joshi, Chemical Transformations of Aldehyde Moieties for developing Sandalwood odorants.</li>
                 </ul>
