--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <h3>Research Articles</h3>
                 <ul>
                     <li>
-                        Submitted - Aditya Sunil Lade, Khetal Vasant Surana, Sai Srinivas Ponugoti, Shreerang V. Joshi, Chemoselective One-Pot Synthesis of Aldimines via a Mechanochemical Approach, 
+                        Submitted - Aditya Sunil Lade, Khetal Vasant Surana, Sai Srinivas Ponugoti, Shreerang V. Joshi, One-Pot Synthesis of Aldimines via a Mechanochemical Approach, 
                         <em>Organic & Biomolecular Chemistry</em>, December 2024. <br>
                     </li>
                     <li>
