--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
                 <ul>
                     <li>
                         Submitted - Aditya Sunil Lade, Khetal Vasant Surana, Sai Srinivas Ponugoti, Shreerang V. Joshi, One-Pot Synthesis of Aldimines via a Mechanochemical Approach, 
-                        <em>Organic & Biomolecular Chemistry</em>, December 2024. <br>
+                        <em>RSC Mechanochemistry</em>, December 2024. <br>
                     </li>
                     <li>
-                        Work in Progress - Efficient Synthesis of Quinoxalines: A Green Catalytic Approach in a Biphasic Medium.
+                        Research Work in Progress - Efficient Synthesis of Quinoxalines: A Green Catalytic Approach in a Biphasic Medium.
                     </li>
                 </ul>
                 
