--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <h3>Research Articles</h3>
                 <ul>
                     <li>
-                        Submitted - Aditya Sunil Lade, Khetal Vasant Surana, Sai Srinivas Ponugoti, Shreerang V. Joshi, One-Pot Synthesis of Aldimines via a Mechanochemical Approach, 
+                        Under Peer-Review - Aditya Sunil Lade, Khetal Vasant Surana, Sai Srinivas Ponugoti, Shreerang V. Joshi, One-Pot Synthesis of Aldimines via a Mechanochemical Approach, 
                         <em>RSC Mechanochemistry</em>, December 2024. <br>
                     </li>
                     <li>
@@ -159,7 +159,7 @@
                 
                 <h3>Review Articles</h3>
                 <ul>
-                    <li>Submitted - Khetal Surana*, Shashwat Singh*, Aditya Sunil Lade, Nitin Arote, Shreerang V. Joshi, Chemistry of Scorpion Venom and its Medicinal Potential, <em>Journal of Current Toxicology and Venomics</em>, February 2025. (*co-first author) (<a href="https://doi.org/10.26434/chemrxiv-2024-32wws" target="_blank">ChemRxiv Link</a>)</li>
+                    <li>Under Peer-Review - Khetal Surana*, Shashwat Singh*, Aditya Sunil Lade, Nitin Arote, Shreerang V. Joshi, Chemistry of Scorpion Venom and its Medicinal Potential, <em>Journal of Current Toxicology and Venomics</em>, February 2025. (*co-first author) (<a href="https://doi.org/10.26434/chemrxiv-2024-32wws" target="_blank">ChemRxiv Link</a>)</li>
                     <li>Manuscript Under Preparation - Khetal Surana, Mariam S. Degani, Mitochondrial Targeting Small Molecule Peptidomimetics for Anti-Cancer Therapy.</li>
                     <li>Manuscript Under Preparation - Aditya Sunil Lade, Khetal Surana, Shreerang V. Joshi, Chemical Transformations of Aldehyde Moieties for developing Sandalwood odorants.</li>
                 </ul>
