--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                 <h3>Research Articles</h3>
                 <ul>
                     <li>
-                        Accepted - Aditya Sunil Lade, Khetal Vasant Surana, Sai Srinivas Ponugoti, Shreerang V. Joshi, One-Pot Synthesis of Aldimines via a Mechanochemical Approach, 
-                        <em>RSC Mechanochemistry</em>, December 2024. <br>
+                        Aditya Sunil Lade, Khetal Vasant Surana, Sai Srinivas Ponugoti, Shreerang V. Joshi, One-Pot Synthesis of Aldimines via a Mechanochemical Approach, 
+                        <em>RSC Mechanochemistry</em>(2025), (<a href="https://doi.org/10.1039/D5MR00004A" target="_blank">DOI</a>)</li><br>
                     </li>
                     <li>
                         Research Work in Progress - Efficient Synthesis of Quinoxalines: A Green Catalytic Approach in a Biphasic Medium.
@@ -159,7 +159,7 @@
                 
                 <h3>Review Articles</h3>
                 <ul>
-                    <li>Under Peer-Review - Khetal Surana*, Shashwat Singh*, Aditya Sunil Lade, Nitin Arote, Shreerang V. Joshi, Chemistry of Scorpion Venom and its Medicinal Potential, <em>Journal of Current Toxicology and Venomics</em>, February 2025. (*co-first author) (<a href="https://doi.org/10.26434/chemrxiv-2024-32wws" target="_blank">ChemRxiv Link</a>)</li>
+                    <li>Accepted - Khetal Surana*, Shashwat Singh*, Aditya Sunil Lade, Nitin Arote, Shreerang V. Joshi, Chemistry of Scorpion Venom and its Medicinal Potential, <em>Journal of Current Toxicology and Venomics</em> (2025)(*co-first author) (<a href="https://doi.org/10.26434/chemrxiv-2024-32wws" target="_blank">ChemRxiv Link</a>)</li>
                     <li>Manuscript Under Preparation - Khetal Surana, Mariam S. Degani, Mitochondrial Targeting Small Molecule Peptidomimetics for Anti-Cancer Therapy.</li>
                     <li>Manuscript Under Preparation - Aditya Sunil Lade, Khetal Surana, Shreerang V. Joshi, Chemical Transformations of Aldehyde Moieties for developing Sandalwood odorants.</li>
                 </ul>
