--- a/index.html
+++ b/index.html
@@ -148,14 +148,10 @@
                 <h2>Research Output</h2>
                 <h3>Research Articles</h3>
                 <ul>
-                    <li>
-                        Aditya Sunil Lade, Khetal Vasant Surana, Sai Srinivas Ponugoti, Shreerang V. Joshi, One-Pot Synthesis of Aldimines via a Mechanochemical Approach, 
+                    <li>Aditya Sunil Lade, Khetal Vasant Surana, Sai Srinivas Ponugoti, Shreerang V. Joshi, One-Pot Synthesis of Aldimines via a Mechanochemical Approach, 
                         <em>RSC Mechanochemistry</em> (2025) (<a href="https://doi.org/10.1039/D5MR00004A" target="_blank">DOI</a>)</li><br>
-                    <li>
-                        Research Work in Progress - Efficient Synthesis of Quinoxalines: A Green Catalytic Approach in a Biphasic Medium.
-                    </li>
+                       <li>Research Work in Progress - Efficient Synthesis of Quinoxalines: A Green Catalytic Approach in a Biphasic Medium.</li>
                 </ul>
-                
                 <h3>Review Articles</h3>
                 <ul>
                     <li>Accepted - Khetal Surana*, Shashwat Singh*, Aditya Sunil Lade, Nitin Arote, Shreerang V. Joshi, Chemistry of Scorpion Venom and its Medicinal Potential, <em>Journal of Current Toxicology and Venomics</em> (2025)(*co-first author) (<a href="https://doi.org/10.26434/chemrxiv-2024-32wws" target="_blank">ChemRxiv Link</a>)</li>
