--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <h3>Research Articles</h3>
                 <ul>
                     <li>Aditya Sunil Lade, Khetal Vasant Surana, Sai Srinivas Ponugoti, Shreerang V. Joshi, One-Pot Synthesis of Aldimines via a Mechanochemical Approach, 
-                        <em>RSC Mechanochemistry</em> (2025) (<a href="https://doi.org/10.1039/D5MR00004A" target="_blank">DOI</a>)</li><br>
+                        <em>RSC Mechanochemistry</em> (2025) (<a href="https://doi.org/10.1039/D5MR00004A" target="_blank">DOI</a>)</li>
                        <li>Research Work in Progress - Efficient Synthesis of Quinoxalines: A Green Catalytic Approach in a Biphasic Medium.</li>
                 </ul>
                 <h3>Review Articles</h3>
